--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 @import url("https://fonts.googleapis.com/css?family=Slabo+27px");
 * {
   margin: 0;
@@ -229,7 +230,19 @@ header {
 main#pages {
   text-align: center;
   overflow-x: hidden;
-  overflow-y: scroll; }
+  overflow-y: scroll;
+  -webkit-overflow-scrolling: touch; }
+  main#pages .section {
+    display: block;
+    margin: 0 auto 20px auto;
+    padding: 20px 0;
+    width: 100vw;
+    background: #eee;
+    overflow: auto; }
+    main#pages .section.paypalPowered {
+      background: none; }
+      main#pages .section.paypalPowered img {
+        width: 150px !important; }
   main#pages.home {
     background: #fff; }
     main#pages.home .accordion-orig {
@@ -241,6 +254,7 @@ main#pages {
       height: calc(100% - 5px); }
       main#pages.home .accordion span {
         position: relative;
+        float: left;
         display: inline-block;
         width: 5%;
         height: 100%;
@@ -327,32 +341,158 @@ main#pages {
       transform: translate(50%, -50%); }
       main#pages.collection .dichotomy .right a:hover {
         transform: translate(50%, -50%) scale(1.03); }
-  main#pages.kamon .section {
-    display: block;
-    margin: 0 auto 20px auto;
-    padding: 20px 0;
-    width: 100vw;
-    background: #eee;
-    overflow: auto; }
-    main#pages.kamon .section .sub-section {
-      display: inline-block;
-      margin: 0 20px;
-      width: calc(50% - 40px);
-      text-align: left; }
-      main#pages.kamon .section .sub-section.left {
-        float: left; }
-      main#pages.kamon .section .sub-section.right {
-        float: right; }
-      main#pages.kamon .section .sub-section.txt {
-        margin: 20px; }
-        main#pages.kamon .section .sub-section.txt ol {
-          list-style-position: inside; }
-    main#pages.kamon .section img {
+  main#pages.hnya .top, main#pages.hnya .bottom {
+    position: relative;
+    height: calc(100vh - 80px); }
+    main#pages.hnya .top .centerThis, main#pages.hnya .bottom .centerThis {
+      position: absolute;
+      left: 50%;
+      top: 50%;
+      transform: translate(-50%, -50%);
       width: 100%; }
-    main#pages.kamon .section.paypalPowered {
-      background: none; }
-      main#pages.kamon .section.paypalPowered img {
-        width: 150px; }
+  main#pages.hnya .top #hnya-logo {
+    width: 500px;
+    max-width: 100%;
+    max-height: 100%; }
+  main#pages.hnya .top p {
+    margin: 20px auto;
+    width: 750px;
+    max-width: 90vw; }
+  main#pages.hnya .top a {
+    position: relative;
+    transition: 0.2s ease-in-out;
+    font-size: 24px; }
+    main#pages.hnya .top a:hover, main#pages.hnya .top a.active {
+      color: #bf2a32; }
+      main#pages.hnya .top a:hover::before, main#pages.hnya .top a:hover::after, main#pages.hnya .top a.active::before, main#pages.hnya .top a.active::after {
+        width: 100%; }
+    main#pages.hnya .top a::before, main#pages.hnya .top a::after {
+      content: "";
+      position: absolute;
+      right: 0;
+      bottom: -0.1em;
+      width: 0;
+      height: 1px;
+      background: #bf2a32;
+      transition: 0.2s ease-in-out; }
+    main#pages.hnya .top a::before {
+      left: 0;
+      right: initial;
+      top: -0.05em;
+      bottom: initial; }
+    main#pages.hnya .top a::after {
+      left: 50%;
+      right: initial;
+      transform: translate(-50%, 0); }
+    main#pages.hnya .top a::before {
+      content: none; }
+  main#pages.hnya .bottom {
+    background: #eee; }
+    main#pages.hnya .bottom h1 {
+      padding: 10px 0; }
+    main#pages.hnya .bottom .ig-feed {
+      margin: 0 auto;
+      width: 900px;
+      max-width: 100vw; }
+      main#pages.hnya .bottom .ig-feed .ig-post {
+        position: relative;
+        display: inline-block;
+        margin: 10px;
+        width: calc(900px / 3 - 60px);
+        height: calc(900px / 3 - 60px);
+        box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
+        transition: box-shadow 0.2s ease-in-out;
+        background: #bf2a32; }
+        main#pages.hnya .bottom .ig-feed .ig-post:hover {
+          box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2); }
+        main#pages.hnya .bottom .ig-feed .ig-post:hover .ig-img {
+          opacity: 0.5; }
+        main#pages.hnya .bottom .ig-feed .ig-post:hover .ig-user, main#pages.hnya .bottom .ig-feed .ig-post:hover .likes {
+          opacity: 1; }
+        main#pages.hnya .bottom .ig-feed .ig-post > * {
+          pointer-events: none; }
+      main#pages.hnya .bottom .ig-feed .ig-user {
+        position: absolute;
+        left: 0;
+        top: 0;
+        z-index: 1;
+        margin: 10px;
+        opacity: 0;
+        transition: opacity 0.2s ease-in-out; }
+        main#pages.hnya .bottom .ig-feed .ig-user * {
+          vertical-align: middle; }
+        main#pages.hnya .bottom .ig-feed .ig-user span {
+          display: inline-block;
+          width: 30px;
+          height: 30px;
+          border: 1px solid #fff;
+          border-radius: 30px;
+          background: center/cover no-repeat; }
+        main#pages.hnya .bottom .ig-feed .ig-user b {
+          color: #fff; }
+      main#pages.hnya .bottom .ig-feed .ig-img {
+        display: inline-block;
+        width: 100%;
+        height: 100%;
+        background: center/cover no-repeat;
+        opacity: 1;
+        transition: opacity 0.2s ease-in-out; }
+      main#pages.hnya .bottom .ig-feed .likes {
+        position: absolute;
+        margin: 10px;
+        right: 0;
+        bottom: 0;
+        color: #fff;
+        font-size: 40px;
+        opacity: 0;
+        transition: opacity 0.2s ease-in-out; }
+        main#pages.hnya .bottom .ig-feed .likes::before {
+          content: "♡";
+          font-size: 32px; }
+  main#pages.kamon .section .sub-section {
+    display: inline-block;
+    margin: 0 20px;
+    width: calc(50% - 40px);
+    text-align: left; }
+    main#pages.kamon .section .sub-section.left {
+      float: left; }
+    main#pages.kamon .section .sub-section.right {
+      float: right; }
+    main#pages.kamon .section .sub-section.txt {
+      margin: 20px; }
+      main#pages.kamon .section .sub-section.txt ol {
+        list-style-position: inside; }
+    main#pages.kamon .section .sub-section h1 {
+      margin: 0 0 20px 0; }
+  main#pages.kamon .section img {
+    width: 100%; }
+  main#pages.kamon .section a {
+    position: relative;
+    transition: 0.2s ease-in-out; }
+    main#pages.kamon .section a:hover, main#pages.kamon .section a.active {
+      color: #bf2a32; }
+      main#pages.kamon .section a:hover::before, main#pages.kamon .section a:hover::after, main#pages.kamon .section a.active::before, main#pages.kamon .section a.active::after {
+        width: 100%; }
+    main#pages.kamon .section a::before, main#pages.kamon .section a::after {
+      content: "";
+      position: absolute;
+      right: 0;
+      bottom: -0.1em;
+      width: 0;
+      height: 1px;
+      background: #bf2a32;
+      transition: 0.2s ease-in-out; }
+    main#pages.kamon .section a::before {
+      left: 0;
+      right: initial;
+      top: -0.05em;
+      bottom: initial; }
+    main#pages.kamon .section a::after {
+      left: 50%;
+      right: initial;
+      transform: translate(-50%, 0); }
+    main#pages.kamon .section a::before {
+      content: none; }
   main#pages.store {
     background: #eee; }
     main#pages.store .shop .prod-group {
@@ -364,8 +504,9 @@ main#pages {
         display: inline-block;
         margin: 20px 0;
         width: 100%;
+        background: #eee;
         font-size: 24px;
-        background: #eee; }
+        text-transform: uppercase; }
         main#pages.store .shop .prod-group .p-g-name::after {
           content: "";
           position: absolute;
@@ -501,65 +642,57 @@ main#pages {
           transform: translate(-50%, -50%);
           font-size: 30px;
           font-style: normal; }
-  main#pages.about .section, main#pages.contact .section, main#pages.legal .section {
-    position: relative;
+  main#pages.about .section .overflow, main#pages.contact .section .overflow, main#pages.legal .section .overflow {
+    margin: 0 auto;
+    width: 900px;
+    max-width: 90vw;
+    max-height: 200px;
+    overflow-y: scroll; }
+  main#pages.about .section h1, main#pages.about .section h2,
+  main#pages.about .section .sub-section, main#pages.contact .section h1, main#pages.contact .section h2,
+  main#pages.contact .section .sub-section, main#pages.legal .section h1, main#pages.legal .section h2,
+  main#pages.legal .section .sub-section {
     margin: 0 auto 20px auto;
-    padding: 20px 0;
-    width: 100vw;
-    background: #eee; }
-    main#pages.about .section .overflow, main#pages.contact .section .overflow, main#pages.legal .section .overflow {
+    width: 900px;
+    max-width: 90vw; }
+    main#pages.about .section h1 img, main#pages.about .section h2 img,
+    main#pages.about .section .sub-section img, main#pages.contact .section h1 img, main#pages.contact .section h2 img,
+    main#pages.contact .section .sub-section img, main#pages.legal .section h1 img, main#pages.legal .section h2 img,
+    main#pages.legal .section .sub-section img {
+      display: table;
       margin: 0 auto;
-      width: 900px;
-      max-width: 90vw;
-      max-height: 200px;
-      overflow-y: scroll; }
-    main#pages.about .section h1, main#pages.about .section h2,
-    main#pages.about .section .sub-section, main#pages.contact .section h1, main#pages.contact .section h2,
-    main#pages.contact .section .sub-section, main#pages.legal .section h1, main#pages.legal .section h2,
-    main#pages.legal .section .sub-section {
-      margin: 0 auto 20px auto;
-      width: 900px;
+      width: 500px;
       max-width: 90vw; }
-      main#pages.about .section h1 img, main#pages.about .section h2 img,
-      main#pages.about .section .sub-section img, main#pages.contact .section h1 img, main#pages.contact .section h2 img,
-      main#pages.contact .section .sub-section img, main#pages.legal .section h1 img, main#pages.legal .section h2 img,
-      main#pages.legal .section .sub-section img {
-        display: table;
-        margin: 0 auto;
-        width: 500px;
-        max-width: 90vw; }
-    main#pages.about .section .sub-section, main#pages.contact .section .sub-section, main#pages.legal .section .sub-section {
-      margin: 0 auto 10px auto;
-      text-align: left; }
-    main#pages.about .section .sub-sub-section, main#pages.contact .section .sub-sub-section, main#pages.legal .section .sub-sub-section {
-      margin: 10px 0; }
-      main#pages.about .section .sub-sub-section a, main#pages.contact .section .sub-sub-section a, main#pages.legal .section .sub-sub-section a {
-        position: relative;
-        transition: 0.2s ease-in-out; }
-        main#pages.about .section .sub-sub-section a:hover, main#pages.about .section .sub-sub-section a.active, main#pages.contact .section .sub-sub-section a:hover, main#pages.contact .section .sub-sub-section a.active, main#pages.legal .section .sub-sub-section a:hover, main#pages.legal .section .sub-sub-section a.active {
-          color: #bf2a32; }
-          main#pages.about .section .sub-sub-section a:hover::before, main#pages.about .section .sub-sub-section a:hover::after, main#pages.about .section .sub-sub-section a.active::before, main#pages.about .section .sub-sub-section a.active::after, main#pages.contact .section .sub-sub-section a:hover::before, main#pages.contact .section .sub-sub-section a:hover::after, main#pages.contact .section .sub-sub-section a.active::before, main#pages.contact .section .sub-sub-section a.active::after, main#pages.legal .section .sub-sub-section a:hover::before, main#pages.legal .section .sub-sub-section a:hover::after, main#pages.legal .section .sub-sub-section a.active::before, main#pages.legal .section .sub-sub-section a.active::after {
-            width: 100%; }
-        main#pages.about .section .sub-sub-section a::before, main#pages.about .section .sub-sub-section a::after, main#pages.contact .section .sub-sub-section a::before, main#pages.contact .section .sub-sub-section a::after, main#pages.legal .section .sub-sub-section a::before, main#pages.legal .section .sub-sub-section a::after {
-          content: "";
-          position: absolute;
-          right: 0;
-          bottom: -0.1em;
-          width: 0;
-          height: 1px;
-          background: #bf2a32;
-          transition: 0.2s ease-in-out; }
-        main#pages.about .section .sub-sub-section a::before, main#pages.contact .section .sub-sub-section a::before, main#pages.legal .section .sub-sub-section a::before {
-          left: 0;
-          right: initial;
-          top: -0.05em;
-          bottom: initial; }
-        main#pages.about .section .sub-sub-section a::after, main#pages.contact .section .sub-sub-section a::after, main#pages.legal .section .sub-sub-section a::after {
-          left: 50%;
-          right: initial;
-          transform: translate(-50%, 0); }
-        main#pages.about .section .sub-sub-section a::before, main#pages.contact .section .sub-sub-section a::before, main#pages.legal .section .sub-sub-section a::before {
-          content: none; }
+  main#pages.about .section .sub-section, main#pages.contact .section .sub-section, main#pages.legal .section .sub-section {
+    margin: 10px auto;
+    text-align: left; }
+  main#pages.about .section a, main#pages.contact .section a, main#pages.legal .section a {
+    position: relative;
+    transition: 0.2s ease-in-out; }
+    main#pages.about .section a:hover, main#pages.about .section a.active, main#pages.contact .section a:hover, main#pages.contact .section a.active, main#pages.legal .section a:hover, main#pages.legal .section a.active {
+      color: #bf2a32; }
+      main#pages.about .section a:hover::before, main#pages.about .section a:hover::after, main#pages.about .section a.active::before, main#pages.about .section a.active::after, main#pages.contact .section a:hover::before, main#pages.contact .section a:hover::after, main#pages.contact .section a.active::before, main#pages.contact .section a.active::after, main#pages.legal .section a:hover::before, main#pages.legal .section a:hover::after, main#pages.legal .section a.active::before, main#pages.legal .section a.active::after {
+        width: 100%; }
+    main#pages.about .section a::before, main#pages.about .section a::after, main#pages.contact .section a::before, main#pages.contact .section a::after, main#pages.legal .section a::before, main#pages.legal .section a::after {
+      content: "";
+      position: absolute;
+      right: 0;
+      bottom: -0.1em;
+      width: 0;
+      height: 1px;
+      background: #bf2a32;
+      transition: 0.2s ease-in-out; }
+    main#pages.about .section a::before, main#pages.contact .section a::before, main#pages.legal .section a::before {
+      left: 0;
+      right: initial;
+      top: -0.05em;
+      bottom: initial; }
+    main#pages.about .section a::after, main#pages.contact .section a::after, main#pages.legal .section a::after {
+      left: 50%;
+      right: initial;
+      transform: translate(-50%, 0); }
+    main#pages.about .section a::before, main#pages.contact .section a::before, main#pages.legal .section a::before {
+      content: none; }
   main#pages.about #contact-us .sub-section, main#pages.contact #contact-us .sub-section, main#pages.legal #contact-us .sub-section {
     text-align: center; }
   main#pages.about #subscribe table, main#pages.contact #subscribe table, main#pages.legal #subscribe table {
@@ -598,12 +731,6 @@ main#pages {
   main#pages.about #subscribe textarea, main#pages.contact #subscribe textarea, main#pages.legal #subscribe textarea {
     resize: vertical;
     height: 100px; }
-  main#pages .coming-soon {
-    position: absolute;
-    left: 50%;
-    top: 50%;
-    transform: translate(-50%, -50%);
-    color: #bf2a32; }
 
 footer#desktop {
   position: relative;
@@ -658,9 +785,13 @@ footer#desktop {
   header {
     grid-template-areas: "logo";
     grid-template-columns: 1fr;
-    grid-template-rows: 80px; }
+    grid-template-rows: 80px;
+    box-shadow: none !important; }
     header #nav-trigger {
       display: block; }
+
+  #nav-mobile {
+    box-shadow: inset -10px 0 20px -10px rgba(0, 0, 0, 0.3); }
 
   nav#desktop {
     display: none; }
@@ -681,6 +812,19 @@ footer#desktop {
         main#pages.home .accordion span.opened .a-title {
           width: 145px;
           height: 145px; }
+    main#pages.collection .dichotomy .left, main#pages.collection .dichotomy .right {
+      width: 100% !important;
+      height: 50% !important;
+      opacity: 1 !important; }
+      main#pages.collection .dichotomy .left a, main#pages.collection .dichotomy .right a {
+        left: 50% !important;
+        right: initial !important;
+        transform: translate(-50%, -50%) !important; }
+    main#pages.hnya .top, main#pages.hnya .bottom {
+      height: initial; }
+      main#pages.hnya .top .centerThis, main#pages.hnya .bottom .centerThis {
+        position: static;
+        transform: none; }
     main#pages.kamon .section {
       padding: 0 0 20px 0; }
       main#pages.kamon .section .sub-section {
