--- a/css/styles.css
+++ b/css/styles.css
@@ -102,11 +102,22 @@ main#pages {
     grid-area: footer;
     align-self: center; }
 
+footer#desktop {
+  display: grid;
+  width: 100vw;
+  grid-template-areas: "footer-blank footer-links footer-right";
+  grid-template-columns: 1fr 900px 1fr; }
+  footer#desktop #footer-blank {
+    grid-area: footer-blank; }
+  footer#desktop #footer-links {
+    grid-area: footer-links; }
+  footer#desktop #footer-right {
+    grid-area: footer-right; }
+
 header {
   position: relative;
   z-index: 1;
   height: 100%;
-  background: #fff;
   transition: 0.2s ease-in-out; }
   header:hover, header.scrolled {
     box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2); }
@@ -192,31 +203,33 @@ header {
   text-align: center; }
   #nav-mobile #mobile a {
     margin: 10px 0; }
-  #nav-mobile nav#mobile {
-    margin: 60px 0 0 0; }
-    #nav-mobile nav#mobile a {
-      position: relative;
-      transition: 0.2s ease-in-out;
-      letter-spacing: 3px;
-      display: block; }
-      #nav-mobile nav#mobile a:hover, #nav-mobile nav#mobile a.active {
-        color: #bf2a32; }
-        #nav-mobile nav#mobile a:hover::before, #nav-mobile nav#mobile a:hover::after, #nav-mobile nav#mobile a.active::before, #nav-mobile nav#mobile a.active::after {
-          width: 100%; }
-      #nav-mobile nav#mobile a::before, #nav-mobile nav#mobile a::after {
-        content: "";
-        position: absolute;
-        right: 0;
-        bottom: -0.1em;
-        width: 0;
-        height: 1px;
-        background: #bf2a32;
-        transition: 0.2s ease-in-out; }
-      #nav-mobile nav#mobile a::before {
-        left: 0;
-        right: initial;
-        top: -0.05em;
-        bottom: initial; }
+  #nav-mobile #nav-logo {
+    margin: 20px 0 10px 0;
+    width: 30px; }
+  #nav-mobile nav#mobile a {
+    position: relative;
+    transition: 0.2s ease-in-out;
+    margin: 20px 0;
+    letter-spacing: 3px;
+    display: block; }
+    #nav-mobile nav#mobile a:hover, #nav-mobile nav#mobile a.active {
+      color: #bf2a32; }
+      #nav-mobile nav#mobile a:hover::before, #nav-mobile nav#mobile a:hover::after, #nav-mobile nav#mobile a.active::before, #nav-mobile nav#mobile a.active::after {
+        width: 100%; }
+    #nav-mobile nav#mobile a::before, #nav-mobile nav#mobile a::after {
+      content: "";
+      position: absolute;
+      right: 0;
+      bottom: -0.1em;
+      width: 0;
+      height: 1px;
+      background: #bf2a32;
+      transition: 0.2s ease-in-out; }
+    #nav-mobile nav#mobile a::before {
+      left: 0;
+      right: initial;
+      top: -0.05em;
+      bottom: initial; }
   #nav-mobile footer#mobile {
     position: absolute;
     left: 50%;
@@ -227,9 +240,11 @@ header {
       position: relative;
       transition: 0.2s ease-in-out;
       display: block;
+      margin: 10px 0;
       width: 40vw;
       color: gray;
-      font-size: 12px; }
+      font-size: 12px;
+      letter-spacing: initial; }
       #nav-mobile footer#mobile a:hover, #nav-mobile footer#mobile a.active {
         color: #bf2a32; }
         #nav-mobile footer#mobile a:hover::before, #nav-mobile footer#mobile a:hover::after, #nav-mobile footer#mobile a.active::before, #nav-mobile footer#mobile a.active::after {
@@ -274,10 +289,8 @@ main#pages {
     width: 100vw;
     background: #eee;
     overflow: auto; }
-    main#pages .section.paypalPowered {
-      background: none; }
-      main#pages .section.paypalPowered img {
-        width: 150px !important; }
+    main#pages .section:last-child {
+      margin: 0 auto 60px auto; }
   main#pages.home {
     background: #fff; }
     main#pages.home .accordion-orig {
@@ -289,7 +302,7 @@ main#pages {
       height: calc(100% - 5px); }
       main#pages.home .accordion span {
         position: relative;
-        float: left;
+        float: center;
         display: inline-block;
         width: 5%;
         height: 100%;
@@ -317,7 +330,8 @@ main#pages {
             color: #fff;
             letter-spacing: 3px;
             font-size: 25px;
-            opacity: 1; }
+            opacity: 1;
+            transition: transform 0.2s ease-in-out; }
             main#pages.home .accordion span.opened .a-title:hover {
               transform: translate(-50%, -50%) scale(1.03); }
             main#pages.home .accordion span.opened .a-title i {
@@ -357,7 +371,8 @@ main#pages {
         color: #fff;
         letter-spacing: 3px;
         font-size: 25px;
-        opacity: 1; }
+        opacity: 1;
+        transition: transform 0.2s ease-in-out; }
         main#pages.collection .dichotomy .left a:hover, main#pages.collection .dichotomy .right a:hover {
           transform: translate(-50%, -50%) scale(1.03); }
         main#pages.collection .dichotomy .left a i, main#pages.collection .dichotomy .right a i {
@@ -422,6 +437,7 @@ main#pages {
     main#pages.hnya .top a::before {
       content: none; }
   main#pages.hnya .bottom {
+    position: relative;
     background: #eee; }
     main#pages.hnya .bottom h1 {
       padding: 10px 0; }
@@ -433,8 +449,8 @@ main#pages {
         position: relative;
         display: inline-block;
         margin: 10px;
-        width: calc(900px / 3 - 60px);
-        height: calc(900px / 3 - 60px);
+        width: calc(900px / 3 - 90px);
+        height: calc(900px / 3 - 90px);
         box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
         transition: box-shadow 0.2s ease-in-out;
         background: #bf2a32; }
@@ -484,56 +500,116 @@ main#pages {
         main#pages.hnya .bottom .ig-feed .likes::before {
           content: "♡";
           font-size: 32px; }
-  main#pages.kamon .section .sub-section {
-    display: inline-block;
-    margin: 0 20px;
-    width: calc(50% - 40px);
-    text-align: left; }
-    main#pages.kamon .section .sub-section.left {
-      float: left; }
-    main#pages.kamon .section .sub-section.right {
-      float: right; }
-    main#pages.kamon .section .sub-section.txt {
-      margin: 20px; }
-      main#pages.kamon .section .sub-section.txt ol {
-        list-style-position: inside; }
-    main#pages.kamon .section .sub-section h1 {
-      margin: 0 0 20px 0; }
-  main#pages.kamon .section img {
-    width: 100%; }
-  main#pages.kamon .section a {
-    position: relative;
-    transition: 0.2s ease-in-out; }
-    main#pages.kamon .section a:hover, main#pages.kamon .section a.active {
-      color: #bf2a32; }
-      main#pages.kamon .section a:hover::before, main#pages.kamon .section a:hover::after, main#pages.kamon .section a.active::before, main#pages.kamon .section a.active::after {
+    main#pages.hnya .bottom .ig-user-title {
+      display: table;
+      margin: 0 auto 10px auto;
+      padding: 0 0 10px 0;
+      width: 770px;
+      max-width: 100vw;
+      text-align: left;
+      border-bottom: 1px solid #bf2a32; }
+      main#pages.hnya .bottom .ig-user-title * {
+        vertical-align: middle; }
+      main#pages.hnya .bottom .ig-user-title span {
+        display: inline-block;
+        margin: 0 4px 0 0;
+        width: 30px;
+        height: 30px;
+        border: 1px solid #fff;
+        border-radius: 30px;
+        background: center/cover no-repeat; }
+      main#pages.hnya .bottom .ig-user-title b a {
+        color: #bf2a32; }
+    main#pages.hnya .bottom .seeMore {
+      position: relative;
+      transition: 0.2s ease-in-out;
+      color: #bf2a32;
+      font-size: 24px; }
+      main#pages.hnya .bottom .seeMore:hover, main#pages.hnya .bottom .seeMore.active {
+        color: #bf2a32; }
+        main#pages.hnya .bottom .seeMore:hover::before, main#pages.hnya .bottom .seeMore:hover::after, main#pages.hnya .bottom .seeMore.active::before, main#pages.hnya .bottom .seeMore.active::after {
+          width: 100%; }
+      main#pages.hnya .bottom .seeMore::before, main#pages.hnya .bottom .seeMore::after {
+        content: "";
+        position: absolute;
+        right: 0;
+        bottom: -0.1em;
+        width: 0;
+        height: 1px;
+        background: #bf2a32;
+        transition: 0.2s ease-in-out; }
+      main#pages.hnya .bottom .seeMore::before {
+        left: 0;
+        right: initial;
+        top: -0.05em;
+        bottom: initial; }
+      main#pages.hnya .bottom .seeMore::after {
+        left: 50%;
+        right: initial;
+        transform: translate(-50%, 0); }
+      main#pages.hnya .bottom .seeMore::before {
+        content: none; }
+  main#pages.kamon {
+    background: #eee; }
+    main#pages.kamon .section {
+      width: 900px;
+      max-width: 100vw;
+      border-bottom: 1px solid #fff; }
+      main#pages.kamon .section .sub-section {
+        display: inline-block;
+        margin: 0 20px;
+        width: calc(50% - 40px);
+        text-align: left; }
+        main#pages.kamon .section .sub-section.left {
+          float: left; }
+        main#pages.kamon .section .sub-section.right {
+          float: right; }
+        main#pages.kamon .section .sub-section.txt {
+          margin: 10px 20px; }
+          main#pages.kamon .section .sub-section.txt ol {
+            list-style-position: inside; }
+        main#pages.kamon .section .sub-section h1 {
+          margin: 0 0 20px 0; }
+      main#pages.kamon .section img {
         width: 100%; }
-    main#pages.kamon .section a::before, main#pages.kamon .section a::after {
-      content: "";
-      position: absolute;
-      right: 0;
-      bottom: -0.1em;
-      width: 0;
-      height: 1px;
-      background: #bf2a32;
-      transition: 0.2s ease-in-out; }
-    main#pages.kamon .section a::before {
-      left: 0;
-      right: initial;
-      top: -0.05em;
-      bottom: initial; }
-    main#pages.kamon .section a::after {
-      left: 50%;
-      right: initial;
-      transform: translate(-50%, 0); }
-    main#pages.kamon .section a::before {
-      content: none; }
-  main#pages.store {
+      main#pages.kamon .section a {
+        position: relative;
+        transition: 0.2s ease-in-out;
+        color: #bf2a32; }
+        main#pages.kamon .section a:hover, main#pages.kamon .section a.active {
+          color: #bf2a32; }
+          main#pages.kamon .section a:hover::before, main#pages.kamon .section a:hover::after, main#pages.kamon .section a.active::before, main#pages.kamon .section a.active::after {
+            width: 100%; }
+        main#pages.kamon .section a::before, main#pages.kamon .section a::after {
+          content: "";
+          position: absolute;
+          right: 0;
+          bottom: -0.1em;
+          width: 0;
+          height: 1px;
+          background: #bf2a32;
+          transition: 0.2s ease-in-out; }
+        main#pages.kamon .section a::before {
+          left: 0;
+          right: initial;
+          top: -0.05em;
+          bottom: initial; }
+        main#pages.kamon .section a::after {
+          left: 50%;
+          right: initial;
+          transform: translate(-50%, 0); }
+        main#pages.kamon .section a::before {
+          content: none; }
+  main#pages.store .shop {
     background: #eee; }
     main#pages.store .shop .prod-group {
       margin: 0 auto;
       width: 80vw;
       text-align: left; }
+      main#pages.store .shop .prod-group::after {
+        content: "";
+        display: table;
+        clear: both; }
       main#pages.store .shop .prod-group .p-g-name {
         position: relative;
         display: inline-block;
@@ -548,7 +624,7 @@ main#pages {
           top: 50%;
           transform: translate(0, -50%);
           width: 85%;
-          height: 1px;
+          height: 1.5px;
           background: #bf2a32; }
       main#pages.store .shop .prod-group .product {
         display: inline-block;
@@ -586,10 +662,14 @@ main#pages {
             border-radius: 4px;
             background: #bf2a32;
             color: #fff;
+            box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
+            transition: box-shadow 0.2s ease-in-out;
             position: absolute;
             left: 50%;
             top: 50%;
             transform: translate(-50%, -50%); }
+            main#pages.store .shop .prod-group .product .p-img .buyNow:hover {
+              box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2); }
             main#pages.store .shop .prod-group .product .p-img .buyNow:active {
               background: rgba(191, 42, 50, 0.7); }
           main#pages.store .shop .prod-group .product .p-img .p-img-carousel {
@@ -624,8 +704,12 @@ main#pages {
           border-radius: 4px;
           background: #bf2a32;
           color: #fff;
+          box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
+          transition: box-shadow 0.2s ease-in-out;
           cursor: default;
           margin: 0 0 0 10px; }
+          main#pages.store .shop .prod-group .product .p-price:hover {
+            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2); }
           main#pages.store .shop .prod-group .product .p-price:active {
             background: rgba(191, 42, 50, 0.7); }
           main#pages.store .shop .prod-group .product .p-price::before {
@@ -641,7 +725,11 @@ main#pages {
       main#pages.store .shop .prod-info .options, main#pages.store .shop .prod-info .addToCart {
         font-size: 18px; }
       main#pages.store .shop .prod-info .options {
-        background: #fff; }
+        background: #fff;
+        box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
+        transition: box-shadow 0.2s ease-in-out; }
+        main#pages.store .shop .prod-info .options:hover {
+          box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2); }
       main#pages.store .shop .prod-info .options[p-paypal="undefined"].undefined {
         display: none; }
       main#pages.store .shop .prod-info .addToCart {
@@ -652,7 +740,11 @@ main#pages {
         border: none;
         border-radius: 4px;
         background: #bf2a32;
-        color: #fff; }
+        color: #fff;
+        box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
+        transition: box-shadow 0.2s ease-in-out; }
+        main#pages.store .shop .prod-info .addToCart:hover {
+          box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2); }
         main#pages.store .shop .prod-info .addToCart:active {
           background: rgba(191, 42, 50, 0.7); }
       main#pages.store .shop .prod-info .close-p-i {
@@ -757,62 +849,77 @@ main#pages {
       border-radius: 4px;
       background: #bf2a32;
       color: #fff;
+      box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
+      transition: box-shadow 0.2s ease-in-out;
       padding: 7px 0;
       font-size: 18px; }
+      main#pages.about #subscribe input[type="submit"]:hover, main#pages.about #subscribe textarea[type="submit"]:hover, main#pages.contact #subscribe input[type="submit"]:hover, main#pages.contact #subscribe textarea[type="submit"]:hover, main#pages.legal #subscribe input[type="submit"]:hover, main#pages.legal #subscribe textarea[type="submit"]:hover {
+        box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2); }
       main#pages.about #subscribe input[type="submit"]:active, main#pages.about #subscribe textarea[type="submit"]:active, main#pages.contact #subscribe input[type="submit"]:active, main#pages.contact #subscribe textarea[type="submit"]:active, main#pages.legal #subscribe input[type="submit"]:active, main#pages.legal #subscribe textarea[type="submit"]:active {
         background: rgba(191, 42, 50, 0.7); }
   main#pages.about #subscribe textarea, main#pages.contact #subscribe textarea, main#pages.legal #subscribe textarea {
     resize: vertical;
     height: 100px; }
+  main#pages.about img, main#pages.contact img, main#pages.legal img {
+    box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
+    transition: box-shadow 0.2s ease-in-out; }
+    main#pages.about img:hover, main#pages.contact img:hover, main#pages.legal img:hover {
+      box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2); }
 
+footer .social a i {
+  display: inline-block;
+  width: 20px;
+  height: 20px;
+  background: center/cover no-repeat;
+  transition: background-image 0.2s ease-in-out; }
+footer .social a:nth-child(1) {
+  opacity: 0; }
+footer a {
+  position: relative;
+  transition: 0.2s ease-in-out; }
+  footer a:hover, footer a.active {
+    color: #bf2a32; }
+    footer a:hover::before, footer a:hover::after, footer a.active::before, footer a.active::after {
+      width: 100%; }
+  footer a::before, footer a::after {
+    content: "";
+    position: absolute;
+    right: 0;
+    bottom: -0.1em;
+    width: 0;
+    height: 1px;
+    background: #bf2a32;
+    transition: 0.2s ease-in-out; }
+  footer a::before {
+    left: 0;
+    right: initial;
+    top: -0.05em;
+    bottom: initial; }
+  footer a::after {
+    left: 50%;
+    right: initial;
+    transform: translate(-50%, 0); }
+  footer a::before {
+    content: none; }
+footer a, footer .divider {
+  color: gray;
+  font-size: 10px; }
 footer#desktop {
   position: relative;
-  margin: 0 auto;
-  width: 900px;
-  max-width: 95vw;
   text-align: left; }
   footer#desktop .left {
     float: left; }
   footer#desktop .right {
     float: right; }
-  footer#desktop a {
-    position: relative;
-    transition: 0.2s ease-in-out; }
-    footer#desktop a:hover, footer#desktop a.active {
-      color: #bf2a32; }
-      footer#desktop a:hover::before, footer#desktop a:hover::after, footer#desktop a.active::before, footer#desktop a.active::after {
-        width: 100%; }
-    footer#desktop a::before, footer#desktop a::after {
-      content: "";
-      position: absolute;
-      right: 0;
-      bottom: -0.1em;
-      width: 0;
-      height: 1px;
-      background: #bf2a32;
-      transition: 0.2s ease-in-out; }
-    footer#desktop a::before {
-      left: 0;
-      right: initial;
-      top: -0.05em;
-      bottom: initial; }
-    footer#desktop a::after {
-      left: 50%;
-      right: initial;
-      transform: translate(-50%, 0); }
-    footer#desktop a::before {
-      content: none; }
-  footer#desktop a, footer#desktop .divider {
-    color: gray;
-    font-size: 10px; }
-  footer#desktop .social a i {
-    display: inline-block;
-    width: 20px;
-    height: 20px;
-    background: center/cover no-repeat;
-    transition: background-image 0.2s ease-in-out; }
-  footer#desktop .social a:nth-child(1) {
-    opacity: 0; }
+footer #footer-right {
+  background: center/contain no-repeat; }
+  footer #footer-right::after {
+    display: none; }
+  footer #footer-right.paypal {
+    background-image: url("../img/store/paypal-2.png");
+    transform: scale(1.5); }
+  footer #footer-right.nuotsu {
+    background-image: url("../img/about/nuotsu.png"); }
 
 @media (max-width: 750px) {
   body.nav-opened {
@@ -849,6 +956,10 @@ footer#desktop {
         main#pages.home .accordion span.opened .a-title {
           width: 145px;
           height: 145px; }
+    main#pages.collection .dichotomy[style*="1"] {
+      background-image: url("../img/collection/collection-1-mobile.jpg") !important; }
+    main#pages.collection .dichotomy[style*="2"] {
+      background-image: url("../img/collection/collection-2-mobile.jpg") !important; }
     main#pages.collection .dichotomy .left, main#pages.collection .dichotomy .right {
       width: 100% !important;
       height: 50% !important;
@@ -879,7 +990,7 @@ footer#desktop {
         width: 90vw;
         text-align: left; }
         main#pages.store .shop .prod-group .p-g-name::after {
-          width: 70%; }
+          width: 65%; }
       main#pages.store .shop .prod-group .product {
         width: 90vw;
         margin: 0 0 20px 0 !important; }
