--- a/css/styles.css
+++ b/css/styles.css
@@ -118,7 +118,7 @@ header {
   position: relative;
   z-index: 1;
   height: 100%;
-  transition: 0.2s ease-in-out; }
+  transition: box-shadow 0.2s ease-in-out; }
   header:hover, header.scrolled {
     box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2); }
   header #logo a {
