--- a/css/styles.css
+++ b/css/styles.css
@@ -203,7 +203,7 @@ header {
   text-align: center; }
   #nav-mobile #mobile a {
     margin: 10px 0; }
-  #nav-mobile #nav-logo {
+  #nav-mobile #nav-logo img {
     margin: 20px 0 10px 0;
     width: 30px; }
   #nav-mobile nav#mobile a {
