--- a/css/styles.css
+++ b/css/styles.css
@@ -310,6 +310,7 @@ main#pages {
         filter: grayscale(100%);
         opacity: 0.4;
         overflow: hidden;
+        vertical-align: middle;
         transition: 0.2s ease-in-out; }
         main#pages.home .accordion span:hover {
           filter: grayscale(0%);
