--- a/css/styles.css
+++ b/css/styles.css
@@ -440,7 +440,7 @@ main#pages {
         content: none; }
   main#pages.hnya .bottom {
     position: relative;
-    height: 100vh;
+    height: auto;
     background: #eee; }
     main#pages.hnya .bottom h1 {
       padding: 10px 0; }
@@ -750,6 +750,8 @@ main#pages {
           box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2); }
         main#pages.store .shop .prod-info .addToCart:active {
           background: rgba(191, 42, 50, 0.7); }
+      main#pages.store .shop .prod-info .special {
+        color: gray; }
       main#pages.store .shop .prod-info .close-p-i {
         cursor: pointer;
         position: absolute;
