--- a/css/styles.css
+++ b/css/styles.css
@@ -708,6 +708,9 @@ main#pages {
           box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2); }
       main#pages.store .shop .prod-info .options[p-paypal="undefined"].undefined {
         display: none; }
+      main#pages.store .shop .prod-info .sizeChart {
+        margin: 0 10px 0 0;
+        color: gray; }
       main#pages.store .shop .prod-info .addToCart {
         cursor: pointer;
         display: inline-block;
